apps/client/src/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --background: 210 20% 98%;
        --foreground: 222.2 84% 4.9%;

        --card: 0 0% 100%;
        --card-foreground: 222.2 84% 4.9%;

        --primary: 208 35% 41%;
        --primary-foreground: 210 20% 100%;

        --secondary: 210 40% 96.1%;
        --secondary-foreground: 222.2 47.4% 11.2%;

        --muted: 210 40% 96.1%;
        --muted-foreground: 215.4 16.3% 46.9%;

        --accent: 210 40% 96.1%;
        --accent-foreground: 222.2 47.4% 11.2%;

        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 210 40% 98%;

        --success: 142 76% 36%;
        --success-foreground: 210 40% 98%;

        --warning: 45 93% 49%;
        --warning-foreground: 210 40% 98%;

        --border: 214.3 31.8% 91.4%;

        --radius: 0.5rem;
    }

    .dark {
        --background: 240 5% 6.9%;
        --foreground: 0 0% 98%;

        --card: 240 5% 5.9%;
        --card-foreground: 0 0% 98%;

        --primary: 208 25% 25%;
        --primary-foreground: 210 20% 100%;

        --secondary: 240 3.7% 15.9%;
        --secondary-foreground: 0 0% 98%;

        --muted: 240 3.7% 15.9%;
        --muted-foreground: 240 3.7% 40.3%;

        --accent: 240 3.7% 15.9%;
        --accent-foreground: 0 0% 98%;

        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 210 40% 98%;

        --success: 142 56% 36%;
        --success-foreground: 210 40% 98%;

        --warning: 45 90% 45%;
        --warning-foreground: 210 40% 98%;

        --border: 240 3.7% 10.1%;
    }
}

@layer base {
    * {
        @apply border-border 
        [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300
        dark:[&::-webkit-scrollbar-thumb]:bg-slate-500
        [&::-webkit-scrollbar-track]:bg-gray-100
        dark:[&::-webkit-scrollbar-track]:bg-slate-700
        [&::-webkit-scrollbar]:w-2;
    }
    body {
        @apply bg-background text-foreground;
    }
}

